<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="24dp"
        android:padding="2dp"
        android:background="@color/grey"
        />

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="end|bottom"
        android:background="#efefef"
        android:padding="10dp"
        android:text="@string/calc_text"
        android:textSize="48dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_7"
                app:cornerRadius="@dimen/cardview_default_radius" />
            <Button
                android:layout_margin="2dp"
                android:id="@+id/btnEight"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/_8"
                app:cornerRadius="@dimen/cardview_default_radius"
                />
            <Button
                android:layout_margin="2dp"
                android:id="@+id/btnNine"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                app:cornerRadius="@dimen/cardview_default_radius"
                android:text="@string/_9"/>
            <Button
                app:cornerRadius="@dimen/cardview_default_radius"
                android:layout_margin="2dp"
                android:id="@+id/btnDivide"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/divide"/>
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <Button
            app:cornerRadius="@dimen/cardview_default_radius"
            android:layout_margin="2dp"
            android:id="@+id/btnFour"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_4"/>
        <Button
            app:cornerRadius="@dimen/cardview_default_radius"
            android:layout_margin="2dp"
            android:id="@+id/btnFive"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_5"/>
        <Button
            app:cornerRadius="@dimen/cardview_default_radius"
            android:layout_margin="2dp"
            android:id="@+id/btnSix"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_6"/>
        <Button
            app:cornerRadius="@dimen/cardview_default_radius"
            android:layout_margin="2dp"
            android:id="@+id/btnMultiply"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/multiply"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <Button
            app:cornerRadius="@dimen/cardview_default_radius"
            android:layout_margin="2dp"
            android:id="@+id/btnOne"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_1"/>
        <Button
            app:cornerRadius="@dimen/cardview_default_radius"
            android:layout_margin="2dp"
            android:id="@+id/btnTwo"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_2"/>
        <Button
            app:cornerRadius="@dimen/cardview_default_radius"
            android:layout_margin="2dp"
            android:id="@+id/btnThree"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_3"/>
        <Button
            app:cornerRadius="@dimen/cardview_default_radius"
            android:layout_margin="2dp"
            android:id="@+id/btnAdd"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/add"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <Button
            app:cornerRadius="@dimen/cardview_default_radius"
            android:layout_margin="2dp"
            android:id="@+id/btnZero"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/_0"/>
        <Button
            app:cornerRadius="@dimen/cardview_default_radius"
            android:layout_margin="2dp"
            android:id="@+id/btnClear"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/clear"/>
        <Button
            app:cornerRadius="@dimen/cardview_default_radius"
            android:layout_margin="2dp"
            android:id="@+id/btnSubtract"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/subtract"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <Button
            app:cornerRadius="@dimen/cardview_default_radius"
            android:layout_margin="2dp"
            android:id="@+id/btnEquals"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/equals"/>
    </LinearLayout>
</LinearLayout>